Build/third-party-libraries/packages/nuget.org/system.security.principal.windows/4.5.0/readme.md
System.Security.Principal.Windows [4.5.0](https://www.nuget.org/packages/System.Security.Principal.Windows/4.5.0)
--------------------

Used by: Core internal, ProtoBuf

Target frameworks: net461, netcoreapp2.1, netcoreapp3.1, netstandard2.0, netstandard2.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://github.com/dotnet/corefx/blob/master/LICENSE.TXT) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides classes for retrieving the current Windows user and for interacting with Windows users and groups.

Commonly Used Types:
System.Security.Principal.WindowsIdentity
System.Security.Principal.SecurityIdentifier
System.Security.Principal.NTAccount
System.Security.Principal.WindowsPrincipal
System.Security.Principal.IdentityReference
System.Security.Principal.IdentityNotMappedException
System.Security.Principal.WindowsBuiltInRole
System.Security.Principal.WellKnownSidType
 
30ab651fcb4354552bd4891619a0bdd81e0ebdbf 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 0
-----------


*This page was generated by a tool.*