Build/third-party-libraries/packages/nuget.org/system.security.principal.windows/5.0.0/readme.md
System.Security.Principal.Windows [5.0.0](https://www.nuget.org/packages/System.Security.Principal.Windows/5.0.0)
--------------------

Used by: AspNetCore internal, AspNetCoreNSwag internal, AspNetCoreSwashbuckle internal, ClientDI internal, Core internal, DesignTime internal, Emit internal, MessagePack internal, SelfHost internal

Target frameworks: net462, net6.0, net7.0, net8.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [Unknown](git://github.com/dotnet/runtime) , License should be verified on git://github.com/dotnet/runtime
- project license: [Unknown](https://github.com/dotnet/runtime) , License should be verified on https://github.com/dotnet/runtime

Description
-----------
Provides classes for retrieving the current Windows user and for interacting with Windows users and groups.

Commonly Used Types:
System.Security.Principal.WindowsIdentity
System.Security.Principal.SecurityIdentifier
System.Security.Principal.NTAccount
System.Security.Principal.WindowsPrincipal
System.Security.Principal.IdentityReference
System.Security.Principal.IdentityNotMappedException
System.Security.Principal.WindowsBuiltInRole
System.Security.Principal.WellKnownSidType
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 0
-----------


*This page was generated by a tool.*